# banquo

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE.txt  README.md  rustfmt.toml
.config/: nextest.toml
.github/workflows/: check-and-lint.yaml  ci.yaml  lint.yaml  test.yaml
banquo/: Cargo.toml  README.md
banquo-core/: Cargo.toml  README.md
banquo-core/src/: lib.rs  metrics.rs  predicate.rs  trace.rs
banquo-core/src/operators/: first_order.rs  forward.rs  mod.rs
banquo-core/tests/: conformance.rs  integration.rs
banquo-hybrid_distance/: Cargo.toml  README.md
banquo-hybrid_distance/src/: automaton.rs  lib.rs  predicate.rs
banquo-hybrid_distance/tests/: conformance.rs
banquo-parser/: Cargo.toml  README.md
banquo-parser/src/: expressions.rs  lib.rs  parser.rs
banquo-parser/src/parser/: common.rs  errors.rs  formula.rs  hybrid_formula.rs  operators.rs
banquo-parser/tests/: parse_hybrid_formula.rs  parse_string_to_policy.rs
banquo-python/: Cargo.toml  pyproject.toml
banquo-python/banquo/: __init__.py  _banquo_impl.pyi  core.py  expressions.py  operators.py  trace.py
banquo-python/src/: lib.rs  metric.rs
banquo-python/tests/: test_conformance.py  test_operators.py  test_predicate.py  test_trace.py
banquo/src/: lib.rs
examples/: Cargo.toml
examples/read-csv-trace/: Cargo.toml  trace.csv
examples/read-csv-trace/src/: main.rs
src/: automaton.rs  expressions.rs  formula.rs  formulas.rs  lib.rs  metric.rs  operators.rs  parser.rs  trace.rs
src/expressions/: hybrid_predicate.rs  mod.rs  polynomial.rs  predicate.rs
src/formulas/: debug_robustness.rs  hybrid_distance.rs  robustness.rs
src/operators/: always.rs  and.rs  backwards.rs  binary.rs  eventually.rs  forward.rs  implies.rs  mod.rs  next.rs  not.rs  or.rs  temporal.rs  unary.rs  until.rs
src/parser/: common.rs  errors.rs  formula.rs  hybrid_formula.rs  operators.rs
tests/: conformance.rs  hybrid_conformance.rs
