[package]
name = "banquo"
version = "0.1.0"
edition = "2021"
authors = ["Quinn Thibeault <qthibeau@asu.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nom = "^7.1.1"
petgraph = "^0.6.2"
ordered-float = "^3.4.0"

[dev-dependencies]
approx = "^0.5.1"
