[package]
name = "banquo-core"
version = "0.1.0"
edition = "2021"
authors = ["Quinn Thibeault <qthibeau@asu.edu>"]
description = "Core types and implementations for Banquo monitor"
documentation = "https://docs.rs/banquo"
repository = "https://github.com/cpslab-asu/banquo"
license = "BSD-3-Clause"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "4.2.0"
thiserror = "1.0.56"

[dev-dependencies]
approx = "0.5.1"
banquo = { path = "../banquo" }
