[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "banquo"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "typing-extensions>=4.13.2",
]

[dependency-groups]
dev = [
    "maturin>=1.9.4",
    "pytest>=8.3.5",
]

[tool.maturin]
module-name = "banquo._banquo_impl"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100

[tool.pyright]
include = ["banquo"]
pythonVersion = "3.9"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
